--- a/package.json
+++ b/package.json
@@ -5,23 +5,23 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc --noEmit && vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@google/generative-ai": "^0.3.0",
-    "lucide-react": "^0.344.0",
-    "react-markdown": "^9.0.1",
-    "remark-gfm": "^4.0.0",
-    "recharts": "^2.12.2"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "@google/genai": "^0.22.0",
+    "lucide-react": "^0.474.0",
+    "react-markdown": "^9.0.3",
+    "remark-gfm": "^4.0.1",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.5"
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.3",
+    "vite": "^5.4.14"
   }
 }
