--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@google/genai": "^0.2.1",
-    "lucide-react": "^0.474.0",
+    "@google/genai": "0.21.0",
+    "lucide-react": "^0.475.0",
     "react-markdown": "^9.0.3",
     "remark-gfm": "^4.0.1",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
-    "@types/react": "^19.0.7",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "typescript": "^5.7.3",
-    "vite": "^5.4.14"
+    "vite": "^6.0.11"
   }
 }
