--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "@google/genai": "1.30.0",
+    "@google/genai": "0.21.0",
     "lucide-react": "^0.475.0",
     "react-markdown": "^9.0.3",
     "remark-gfm": "^4.0.1",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
+    "@types/node": "^22.13.1",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
