--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "thanaweya-smart-tutor",
   "private": true,
@@ -6,24 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@google/genai": "0.21.0",
-    "lucide-react": "^0.475.0",
-    "react-markdown": "^9.0.3",
-    "remark-gfm": "^4.0.1",
-    "recharts": "^2.15.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "@google/generative-ai": "^0.3.0",
+    "lucide-react": "^0.344.0",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
+    "recharts": "^2.12.2"
   },
   "devDependencies": {
-    "@types/node": "^22.13.1",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@vitejs/plugin-react": "^4.3.4",
-    "typescript": "^5.7.3",
-    "vite": "^6.0.11"
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@types/node": "^20.7.3",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.5"
   }
 }
